[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --ignore=debug --ignore=examples/_pweave.py --ignore=simulations --ignore=examples --ignore-glob=*alternatives"

[tool.black]
exclude="examples/.*"
